--- a/chicken.html
+++ b/chicken.html
@@ -8,16 +8,21 @@
 
 <body>
     <h1>Chicken</h1>
+    <hr>
 
     <!-- This is a test comment. -->
+    
+    <img src="fried-egg.jpeg" , alt="My favorite chicken...">
 
-    <img src="fried-egg.jpeg", alt="My favorite chicken...">
+    <div>
+        <a href="http://www.google.com">I am a link to google!!</a>
+        <a href="about.html">I am a link to About!!</a>
+    </div>
 
-    <a href="http://www.google.com">I am a link!!</a>
     <p>
         The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of domesticated
         fowl. Chickens are one of the most common and widespread domestic animals, with a total population of 23.7
-        billion as of 2018,[1] up from more than 19 billion in 2011.[2] There are more chickens in the world than any
+        billion as of 2018,<sup>[1]</sup> up from more than 19 billion in 2011.<sup>[2]</sup> There are more chickens in the world than any
         other bird.[2] Humans keep chickens primarily as a source of food (consuming both their meat and eggs) and, less
         commonly, as pets. Originally raised for cockfighting or for special ceremonies, chickens were not kept for food
         until the Hellenistic period (4th–2nd centuries BCE).
@@ -31,10 +36,12 @@
         come from the land between Syria and Shinar, Babylonia, according to the annals of Thutmose III.[7][8][9]
     </p>
 
+    <section>
     <h2>Terminology</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque cum fugit sapiente quibusdam qui
         consequuntur voluptatum officia repellendus, ipsa ab fuga iste inventore aperiam deserunt eius enim doloremque
         autem.</p>
+    </section>
 
     <h2>General biology and habitat</h2>
     <h3>Behavior</h3>
@@ -51,16 +58,21 @@
     <h2>Breeds of Chickens</h2>
     <ol>
         <li>Bantam</li>
-            <ol>
-                <li>Silkie</li>
-                <li>Polish</li>
-            </ol>
+        <ol>
+            <li>Silkie</li>
+            <li>Polish</li>
+        </ol>
         <li>Standard</li>
         <ol>
             <li>Easter Egger</li>
             <li>Rhode Island Red</li>
         </ol>
     </ol>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/220px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg">
-</body>
+    <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/220px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg">
+    
+    <h2>H<sub>2</sub>O</h2>
+
+    </body>
+
 </html>
