Updated photo blog excercise.

--- a/photo_blog_section9.html
+++ b/photo_blog_section9.html
@@ -11,12 +11,8 @@
 
 <body>
     <h1>My Family</h1>
-    <div class="square">
-        <img src="shizuka.jpg" alt="Shizuka">
-    </div>
-    <div class="square">
-        <img src="kiko.jpg" alt="Kiko" class="adjust">
-    </div>
+    <img src="shizuka.jpg" alt="Shizuka" id="shizuka">
+    <img src="kiko.jpg" alt="Kiko" id="kiko">
 </body>
 
 </html>
